tests/paczka2/big_fuzzy/58629282.err
Error in line 2: 6Xzs4A S780 38,3
Error in line 4: Gh9z A327 49,9
Error in line 8: dwp6IqQ S107 793,8
Error in line 11: S107 S107 49,8
Error in line 35: S107 S107 40,5
Error in line 59: kt8UB7Zz4 A327 7,76
Error in line 56: 6Xzs4A S780 26,6
Error in line 46: kt8UB7Zz4 A327 80,5
Error in line 74: kt8UB7Zz4 A866 11,1
Error in line 81: kt8UB7Zz4 S780 63,53
Error in line 84: 6Xzs4A A3D7 47,5
Error in line 83: 6Xzs4A A327 77,8
Error in line 82: kt8UB7Zz4 S780 300,0
Error in line 93: dwp6IqQ A327 48,4
Error in line 80: iPntUiDM A327 18,8
Error in line 94: 6Xzs4A S107 12,6
Error in line 106: 6Xzs4A S780 31,4
Error in line 107: S107 S780 47,2
Error in line 120: iPntUiDM S107 54,3
Error in line 117: S107 A866 62,1
Error in line 127: S107 A327 49,4
Error in line 114: kt8UB7Zz4 S780 36,7
Error in line 140: 6Xzs4A A866 -2,9
Error in line 139: 6Xzs4A A866 54,4
Error in line 145: 6Xzs4A S107 98,8
Error in line 143: Gh9z S780 3,6
Error in line 152: iPntUiDM S780 96,3
Error in line 150: Gh9z S107 38,9
Error in line 155: iPntUiDM S107 7,1
Error in line 149: FnrmZSDSWDb A866 324,3
Error in line 158: iPntUiDM S780 36,3
Error in line 163: S107 S780 271,5
Error in line 190: 6Xzs4A A327 46,78
Error in line 185: kt8UB7Zz4 S780 87,4
Error in line 197: dwp6IqQ A866 45,6
Error in line 195: S107 A866 50,0
Error in line 178: Gh9z S780 40,1
Error in line 209: Gh9z S107 -1,3
Error in line 170: FnrmZSDSWDb A327 89,5
Error in line 222: dwp6IqQ S780 5,2
Error in line 227: iPntUiDM S780 19,0
Error in line 228: iPntUiDM S107 88,1
Error in line 229: iPntUiDM S780 57,6
Error in line 225: dwp6IqQ A327 70,3
Error in line 235: ÚnrmZSDSWDb S107 43,6
Error in line 216: Gh9z S107 219,0
Error in line 243: Gh9z A866 c2,c
Error in line 244: dwp6IqQ A866 67,6
